Added more questions and added win page

--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,13 @@
   font-size: 18px;
   font-weight: 500;
 }
+
+.finishText{
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+}
