--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,13 @@
   font-weight: 500;
 }
 
+.finishPage{
+  height: 100vh;
+  display: flex;
+  color: white;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230), url("./assets/bg.jpg") center;
+}
+
 .finishText{
   position: relative;
   top: 0;
