--- a/src/index.css
+++ b/src/index.css
@@ -60,11 +60,6 @@
   background-color: teal;
 }
 
-.questNum{
-  font-size: 18px;
-  font-weight: 100;
-  width: 20%;
-}
 .questPrice{
   font-size: 20px;
   font-weight: 300;
@@ -95,7 +90,7 @@
 }
 
 .startInput{
-  width: 100%;
+  width: 98%;
   height: 30px;
   border: none;
   border-radius: 5px;
@@ -132,4 +127,88 @@
   right: 0;
   margin: auto;
   text-align: center;
+}
+
+@media (max-width: 988px) {
+  .finishText{
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 798px) {
+  .finishText{
+    font-size: 20px;
+  }
+}
+
+
+@media (max-width: 630px) {
+  .questPrice{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 614px) {
+  .finishText{
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 559px) {
+  .answers{
+    margin-top: 10px;
+  } 
+  .top{
+    height: 45%;
+  }
+  .timer{
+    height: 50px;
+    width: 50px;
+    border: 4px solid white;
+    font-size: 25px;
+    bottom: 50px;
+    left: 10%;
+  }
+  .finishText{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 530px) {
+  .questPrice{
+    font-size: 12px;
+  }
+  .finishText{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 460px) {
+  .questPrice{
+    font-size: 10px;
+  }
+  .finishText{
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 402px) {
+  .questPrice{
+    font-size: 8px;
+  }
+  .finishText{
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 361px) {
+  .questPrice{
+    font-size: 6px;
+  }
+}
+
+@media (max-width: 322px) {
+  .questPrice{
+    font-size: 4px;
+  }
 }
